﻿English changelog at http://bit.ly/1MfSVUP

[B]Version 2.3.6[/B]
[+] Оптимизация импорта, ускорена работа меню
[+] Новый Проигрыватель [url=https://github.com/izderadicka/btclient]BTclient[/url] в тестовом режиме, требует python-libtorrent >=1.0.4.

[B]Version 2.3.5[/B]
[+] Проигрыватель: Уменьшена просадка после загрузки буфера
[+] Проигрыватель: Проверка на запись хранилища

[B]Version 2.3.4[/B]
[+] Проигрыватель: Новая настройка - спрашивать о сохранении файла
[+] Списки Медиа: Исправлен TheMovieDB для python 2.6

[B]Version 2.3.3[/B]
[+] Поиск: Настройка количества потоков при поиске

[B]Version 2.3.2[/B]
[+] Control Center: Исправлена работа без серчеров
[+] Списки Медиа: Проверка отсутствия серчера
[+] Списки Медиа: Исправлен ThePirateBay
[+] Торрент-клиент: Добавлена возможность указать путь Deluge

[B]Version 2.3.1[/B]
[+] Загрузка: Исправлена ошибка удаления базы данных
[+] Списки Медиа: Исправлен IMDB TOP 250
[+] Проигрыватель: [B]Добавлена полная поддержка Android (arm)[/B]
[+] Поиск: Все серчеры вынесены из плагина

[B]Version 2.3.0[/B]
[+] Поиск: Поиск существенно ускорился, стал многопоточным (пока 3 потока одновременно)
[+] Поиск: Добавлена поддержка внешних серчеров с индивидуальными настройками (в стиле Pulsar)
[+] Обновлено окно Torrenter Global Control Center
[+] Поиск: Исправлен TFileME (теперь внешний)
[+] Поиск: Исправлен RuTrackeOrg (теперь внешний)

[B]Version 2.2.9[/B]
[+] .torrent Проигрыватель: Теперь .torrent не теряется при обновлении окна Kodi
[+] Проигрыватель: Улучшенная настройка сессии из cherrytorrent
[+] Списки Медиа: Обновление баз на русском

[B]Version 2.2.8[/B]
[+] Добавлен Украинский язык (by kharts)
[+] Торрент-клиент: Добавлены иконки торрент-клиентов (by kharts)

[B]Version 2.2.7[/B]
[+] Проигрыватель: User-friendly объяснение причины невозможности стриминга
[+] Торрент-клиент: Исправлено добавление magnet

[B]Version 2.2.5[/B]
[+] Списки Медиа: Исправлен KickAssSo